Revision history for Perl extension DBIx::Skinny

0.0728
   2010-xx-xx
        - MOD   : remove DBIx::Skinny::Accessor. use Class::Accessor::Lite.

0.0727
   2010-11-09
        - ADD   : hash_to_row class.
        - MOD   : DBIx::Skinny::attribute method rename DBIx::Skinny::_attributes. [INCOMPATIBLE CHANGE]
        - ADD   : auto create Row class mode.
        - MOD   : no eval for txn_*. (thanks tokuhirom)

0.0726
   2010-11-02
        - ADD   : disconnect method.(thanks lestrrat)
        - FIXED : tweak English (thanks lestrrat)

0.0725
   2010-10-28
        - ADD   : add handle method for DBIx::Skinny::Row.
        - MOD   : DBIx::Skinny did inherits without doing export.
        - FIXED : don't warn on pk-less tables.(thanks lestrrat)
        - MOD   : allow setting the name of the schema at use DBIx::Skinny time (thanks lestrrat)
        - MOD   : change setup to connect_info. setup now warns, and is aliased to connect_info (thanks lestrrat)
        - MOD   : change where profiler is set, also now respect SKINNY_PROFILE env var (thanks lestrrat)
        - ADD   : add ARCHITECTURE document.(thanks lestrrat)

0.0724
   2010-10-26
        - FIXED : find_or_create multi pk bug (thanks tokuhirom)

0.0723
   2010-10-25
        - MOD : more infomation for no selected column error.
        - MOD : no dependent Test::Output (thanks yibe)

0.0722
   2010-10-20
        - ADD : suppress_row_objects mode. more faster.

0.0721
   2010-09-22
        - FIXED : Fixed pod was broken.(thanks tokuhirom)
        - FIXED : Makefile.PL

0.0720
   2010-08-20
        - FIXED : Fixed bug in using "IN" operator in "DELETE/UPDATE" statement (thanks magicalhat)

0.0719
   2010-08-19
        - FIXED : document.
        - FIXED : inc/Test/SharedFork.pm

0.0718
   2010-08-18
        - MOD : some documetn. see) http://d.hatena.ne.jp/tokuhirom/20100815/1281886033

0.0717
   2010-08-11
        - FIXED : fixed bug for data2itr pass object-array (thanks nihen)

0.0716
   2010-08-10