@@ -742,16 +742,6 @@ sub update {
     return $rows;
 }
 
-sub update_by_sql {
-    my ($class, $sql, $bind) = @_;
-
-    my $sth = $class->_execute($sql, $bind);
-    my $rows = $sth->rows;
-    $class->_close_sth($sth);
-
-    $rows;
-}
-
 sub delete {
     my ($class, $table, $where) = @_;
 
@@ -774,17 +764,6 @@ sub delete {
     $class->call_schema_trigger('post_delete', $schema, $table, $rows);
 
     $class->_close_sth($sth);
-    $rows;
-}
-
-sub delete_by_sql {
-    my ($class, $sql, $bind) = @_;
-
-    my $sth = $class->_execute($sql, $bind);
-    my $rows = $sth->rows;
-
-    $class->_close_sth($sth);
-
     $rows;
 }
 
@@ -1082,17 +1061,6 @@ or
     my $row = Your::Model->single('user',{id => 1});
     $row->update({name => 'nomaneko'});
 
-=item $skinny->update_by_sql($sql, [\@bind_values])
-
-update record by specific sql. return update row count.
-
-example:
-
-    my $update_row_count = Your::Model->update_by_sql(
-        q{UPDATE user SET name = ?},
-        ['nomaneko']
-    );
-
 =item $skinny->delete($table, \%delete_condition)
 
 delete record. return delete row count.
@@ -1108,17 +1076,6 @@ or
     # see) DBIx::Skinny::Row's POD
     my $row = Your::Model->single('user', {id => 1});
     $row->delete
-
-=item $skinny->delete_by_sql($sql, \@bind_values)
-
-delete record by specific sql. return delete row count.
-
-example:
-
-    my $delete_row_count = Your::Model->delete_by_sql(
-        q{DELETE FROM user WHERE id = ?},
-        [1]
-    });
 
 =item $skinny->find_or_create($table, \%values)
 
