@@ -53,36 +53,12 @@ subtest 'insert data' => sub {
     is $row->body, 'body4';
     is $row->raw,  'raw4';
 
-    Mock::BasicBindColumn->update_by_sql(
-        'update mock_basic_bind_column set id = ?, uid = ?, name = ?, body = ? , raw = ?', [5, 5, 'name5', 'body5', 'raw5']
-    );
-
-    $row = Mock::BasicBindColumn->search('mock_basic_bind_column')->first;
-    isa_ok $row, 'DBIx::Skinny::Row';
-    is $row->id,   5;
-    is $row->uid,  5;
-    is $row->name, 'name5';
-    is $row->body, 'body5';
-    is $row->raw,  'raw5';
-
     ok +Mock::BasicBindColumn->delete(
         'mock_basic_bind_column' => +{
-            id => 5,
+            id => 4,
         }
     );
  
-    ok not +Mock::BasicBindColumn->search_by_sql('select * from mock_basic_bind_column where id = ?',[5])->first;
-
-    ok +Mock::BasicBindColumn->insert('mock_basic_bind_column',{
-        id   => 6,
-        uid  => 6,
-        name => 'name6',
-        body => 'body6',
-        raw  => 'raw6',
-    });
-
-    ok +Mock::BasicBindColumn->delete_by_sql('delete from mock_basic_bind_column where id = ?',[6]);
-
     ok not +Mock::BasicBindColumn->search_by_sql('select * from mock_basic_bind_column where id = ?',[4])->first;
 
     done_testing;
