@@ -3,6 +3,7 @@ Revision history for Perl extension DBIx::Skinny
 0.0728
    2010-xx-xx
         - MOD   : remove DBIx::Skinny::Accessor. use Class::Accessor::Lite.
+        - MOD   : obsolete update_by_sql/delete_by_sql. [INCOMPATIBLE CHANGE]
 
 0.0727
    2010-11-09
